--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.4.8",
+    "font-awesome": "^4.7.0",
     "mysql2": "^3.14.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
